--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
   </head>
   
   <body>
-    <p>¡Hola mundo! Pronto llegamos a GitHub</p>
+    <p>¡Hola mundo! Pronto llegamos a GitHub
+	¡Saludanos luego!</p>
   </body>
 
 </html>
